--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,9 @@
     <body>
         <!-- MENU DE NAVEGACION-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="{{ path('home') }}">
+                <img src="{{ asset('img/logo.png') }}" width="30" height="30" alt="">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
